[tool.poetry]
name = "pyproject-init"
version = "0.1.0"
description = "Setup Python projects with pyenv and poetry"
authors = ["angmorpri <angelmorenoprieto@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"

[tool.poetry.group.dev.dependencies]
black = "^24.8.0"
ruff = "^0.6.8"
pytest = "^8.3.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
